--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@
 body, .App, #root{
     width:100%;
     height:100%;
-    /* background-image: url('../public/assets/quiz.jpeg'); 
-    background-repeat: no-repeat;
-   background-size: cover; */
-   background-color: #95B298;
+    background-color:#678E6C;
+   
 }
