--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,11 @@
 }
 
 body, .App, #root{
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     background-color:#678E6C;
    
 }
+
+
+   
