--- a/src/components/styles/QuestionStyles.scss
+++ b/src/components/styles/QuestionStyles.scss
@@ -1,10 +1,10 @@
 
 .quiz-wrapper{
      height:100%;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // display:flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
    
     button{
         margin-top:20px;
@@ -27,10 +27,10 @@
 .quiz{
     border:solid 3px bisque;
     padding:30px;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // display:flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
 
     label{
         display:flex;
